tests/zer_fail/dalpha7_cpu_id_args.zer
// EXPECTED: compile error
// @cpu_id takes no arguments

i32 main() {
    u32 n = @cpu_id(0);  // error: takes no args
    return 0;
}
